# video-analyzer-app

./: .gitignore  ARCHITECTURE.md  README.md  build-windows-installer.ps1  test-backend-connection.ps1
python-backend/: .gitignore  MCP_SERVER_CREATION.md  README.md  api_pb2.py  api_pb2_grpc.py  grpc_server.py  grpcurl.txt  llm_manager.py  main.py  mcp-client-helper.py  mcp_manager.py  pyproject.toml  server.py  test_mcp_tools.py
python-backend/core/: logger.py  orchestrator.py  singleton.py
python-backend/langgraph-poc/: llm_manager.py  main.py  mock_agents.py  test.py
python-backend/tools/: addition_mcp.py
video-analyser-backend/: .env.example  .gitignore  ARCHITECTURE.md  README.md  TODO.md  ai_model_manager.py  configs.py  llm.py  main.py  multi_agent_coordinator.py  orchestrator.py  pyproject.toml  sample_env.txt  server.py  startup.py  storage_paths.py  todos.txt  tools.py
video-analyser-backend/agents/: base_agent.py  generation_agent.py  reclarify_agent.py  report_agent.py  transcription_agent.py  vision_agent.py
video-analyser-backend/archive/: draw_refactored_graph.py  orchestrator_refactored.py
video-analyser-backend/context/: __init__.py  video_context.py
video-analyser-backend/documentation/: MODEL_CONFIG.md  TASK_ROUTING_GUIDE.md  WINDOWS_OFFLINE_BUNDLE.md
video-analyser-backend/fallback/: base.py
video-analyser-backend/models/: __init__.py  agent_capabilities.py  chat_history.py  orchestrator_models.py  planning.py  task_models.py
video-analyser-backend/protos/: __init__.py  video_analyzer_pb2.py  video_analyzer_pb2.pyi  video_analyzer_pb2_grpc.py
video-analyser-backend/routing/: intent_classifier.py
video-analyser-backend/scripts/: README.md  build-backend.sh  build-launcher-wsl.sh  complete-setup.sh  download-dependencies-wsl.sh  download-dependencies.ps1  download_models.py  draw_state_graph.py  generate_pyinstaller_spec.py  launcher.ps1  prepare-release-assets.sh  setup-ollama.sh  test_grpc_calls.py  test_grpc_calls.sh  test_resume_session.py  upload_video.py  verify-bundle-ready.sh
video-analyser-backend/services/: __init__.py  chat_history_service.py  chat_history_storage.py  file_storage.py  output_storage.py  storage_interface.py  video_registrar.py  video_registry_store.py
video-analyser-backend/templates/: chat_history_prompts.py  orchestrator_prompts.py  report_prompts.py  transcription_agent_prompts.py  vision_agent_prompts.py
video-analyser-backend/testing_files/: test.py  test_gpu.py  test_intent_routing.py  test_qwen_fc.py  (+1 more)
(+44 files in other folders)
