[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "fastmcp>=2.12.4",
    "grpcio==1.60.0",
    "grpcio-tools==1.60.0",
    "langgraph>=1.0.1",
    "mcp-inspector>=0.1.0",
    "mcp[cli]>=1.19.0",
    "protobuf==4.25.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
