[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core framework
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "python-dotenv>=1.1.1",
    # LangChain & LLM
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.1",
    "ollama>=0.6.0",
    # ML & Vision
    "torch>=2.9.0", # CPU version recommended for Windows
    "torchvision>=0.24.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.221",
    "transformers>=4.57.1",
    "pillow>=12.0.0",
    # Video processing
    "moviepy>=1.0.3",
    # Document generation
    "reportlab>=3.6.12",
    # OCR (optional)
    "pytesseract>=0.3.13",
    # Build tool
    "pyinstaller>=6.0.0",
    "langchain-google-genai>=3.0.0",
]
